--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 		<script type="text/javascript" src="js/quiz.js"></script>
 		<script type="text/javascript" src="js/controllers/selectquizcontroller.js"></script>
 		<script type="text/javascript" src="js/controllers/barqzcontroller.js"></script>
+		<script type="text/javascript" src="js/services/quizfactory.js"></script>
+		
 		
 	</head>
 	<body>
