--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,32 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Test Your Knowledge</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="css/quiz.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel='stylesheet' href="js/textangular/dist/textAngular.css">
+
 
 		<script type="text/javascript" src="js/scripts/angular.min.js"></script>
 		<script type="text/javascript" src="js/scripts/angular-route.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
 		<script type="text/javascript" src="js/quiz.js"></script>
 		<script type="text/javascript" src="js/controllers/selectquizcontroller.js"></script>
+		<script type="text/javascript" src="js/controllers/formcontroller.js"></script>
+		
 		<script type="text/javascript" src="js/controllers/barqzcontroller.js"></script>
 		<script type="text/javascript" src="js/services/quizfactory.js"></script>
+		<script type="text/javascript" src="js/services/formfactory.js"></script>
+		<script src="js/textangular/dist/textAngular-rangy.min.js"></script>
+		<script src="js/textangular/dist/textAngular-sanitize.min.js"></script>
+		<script src="js/textangular/dist/textAngular.min.js"></script>
+  		
 		
-		
-	</head>
-	<body>
 
-		<div id="myQuiz" ng-view>
+	</head>
+	<body ng-view>
+
+		
 					
 
 		</div>
